tests/lean/255.lean.expected.out
A : α
id x✝ : α
255.lean:16:7-16:8: error: unknown constant 'x✝'
id sorry : ?m
255.lean:20:9-20:10: error: unknown constant 'x✝'
id sorry : ?m
